fixed overflows

--- a/src/app/gui/components/service/service.component.css
+++ b/src/app/gui/components/service/service.component.css
@@ -71,6 +71,7 @@
   justify-content: center;
   height: 1.5em;
   padding: 0 0.5em;
+  overflow: hidden;
 }
 
 .menu {
